# llm-moderator

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml
data/: processed.dvc
lightning_logs/version_0/: hparams.yaml  metrics.csv
llm-moderator/: pyproject.toml
llm-moderator/llm_moderator/: cli.py
llm_moderator/: cli.py
llm_moderator/configs/: config.yaml
llm_moderator/configs/data/: default.yaml
llm_moderator/configs/experimint/: exp.yaml
llm_moderator/configs/mlflow/: default.yaml
llm_moderator/configs/model/: default.yaml
llm_moderator/configs/train/: default.yaml
llm_moderator/data/: download.py  dvc_utils.py  preprocess.py
llm_moderator/models/: datamodule.py  lightning_module.py
llm_moderator/training/: train.py
outputs/2025-12-07/20-49-38/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/20-52-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/20-52-48/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/20-53-09/.hydra/: config.yaml  hydra.yaml
